# bibtex2text-converter

./: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: chore.md  improvement.md
.github/SSUE_TEMPLATE/: bug.md  feature-request.md
.github/workflows/: deploy.yml
bibliography-parser/: Cargo.toml  LICENSE_MIT
bibliography-parser/src/: lib.rs
src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: CitationFormatter.tsx  JsonLd.tsx
