[package]
name = "bibliography-parser"
version = "0.1.0"
authors = ["chantakan <hypocrisy8n0ploblem9for45peace@yahoo.co.jp>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.99"
biblatex = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_yaml = "0.9""
